[gd_scene load_steps=59 format=3 uid="uid://dlmb25heo0fti"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_uy6yo"]
[ext_resource type="Texture2D" uid="uid://uol36pddvrtw" path="res://art/characters/player.png" id="2_6smg7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3b4m"]
size = Vector2(11, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbnw6"]
size = Vector2(11, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxer5"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vpya"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_545jj"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dda5g"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_opf8w"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xjd4"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag3b0"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2scr"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohb00"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_todt2"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_24t8v"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg7e8"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc5em"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8yoc"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b8c6"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld6q2"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj06v"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1315p"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_se4r7"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nexjh"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnrna"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_epvdv"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqcla"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bge5u"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sq5p"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpur5"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3t5q"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_osy0q"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_crv8f"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkp3i"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3hig"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sa2s"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hwly"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2hy6"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8yxv"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_icfy8"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvpli"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axq1m"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ya6m"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_83wa8"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuclt"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvhr7"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s7qq"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec46f"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlxdu"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m58d"]
atlas = ExtResource("2_6smg7")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm0i3"]
atlas = ExtResource("2_6smg7")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6reit"]
atlas = ExtResource("2_6smg7")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w6qy"]
atlas = ExtResource("2_6smg7")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i01o5"]
atlas = ExtResource("2_6smg7")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trlah"]
atlas = ExtResource("2_6smg7")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsfsi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxer5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vpya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_545jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dda5g")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opf8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xjd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag3b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2scr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohb00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_todt2")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24t8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc5em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8yoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b8c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld6q2")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj06v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1315p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se4r7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nexjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnrna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epvdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqcla")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bge5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sq5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpur5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3t5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osy0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crv8f")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkp3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3hig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sa2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hwly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2hy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8yxv")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icfy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvpli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axq1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ya6m")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83wa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuclt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvhr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s7qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec46f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlxdu")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm0i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6reit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w6qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i01o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trlah")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_swviq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb5yx"]
size = Vector2(10, 10)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(2, 2)
collision_mask = 79
script = ExtResource("1_uy6yo")

[node name="CollisionHitBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_n3b4m")

[node name="CombatHitBoxArea" type="Area2D" parent="."]
visible = false
position = Vector2(0.5, -6.5)
collision_mask = 0

[node name="CombatHitBoxShape" type="CollisionShape2D" parent="CombatHitBoxArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fbnw6")

[node name="Animation" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_qsfsi")
animation = &"front_idle"
offset = Vector2(0, -14)

[node name="NpcDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="NpcDetectionShape" type="CollisionShape2D" parent="NpcDetectionArea"]
position = Vector2(0.5, -6)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_swviq")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackShape" type="ShapeCast2D" parent="."]
position = Vector2(0.666667, -6)
shape = SubResource("RectangleShape2D_hb5yx")
target_position = Vector2(14.1667, 14.6667)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.784314, 0.647059, 0.00784314, 1)
z_index = 1
offset_left = -6.0
offset_top = -20.0
offset_right = 124.0
offset_bottom = 1.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
show_percentage = false

[connection signal="body_entered" from="NpcDetectionArea" to="." method="_on_npc_detection_area_body_entered"]
[connection signal="body_exited" from="NpcDetectionArea" to="." method="_on_npc_detection_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
